Added swagger documentation for CartItemController@destroy and fixed problems in tests
